# EnergyLossPlus

./: .gitignore  Cargo.toml  NEXT_STEPS.md  README.md  REGION_MIGRATION.md  package-lock.json  package.json  wrangler.jsonc
.github/workflows/: build-unsigned-ios.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.test.tsx  App.tsx  external-auth.ts  passkey.test.ts  passkey.ts  styles.css  tauri.test.ts  tauri.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: api.rs  cache.rs  command.rs  lib.rs  main.rs
crates/core/: Cargo.toml
crates/core/src/: calc.rs  lib.rs  model.rs
infra/: cdk.json  package.json  tsconfig.json
infra/lib/: energy-loss-plus-stack.ts
scripts/: migrate-dynamodb-region.ps1
services/api/: Cargo.toml
services/api/src/: app-auth.html  auth.rs  dynamo.rs  lib.rs  main.rs  route.rs
