[workspace]
members = [
  "crates/core",
  "apps/desktop/src-tauri",
  "services/api"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.1"

[workspace.dependencies]
anyhow = "1"
aws-config = "1"
aws-sdk-dynamodb = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
lambda_http = "0.13"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-webpki-roots"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4", "serde"] }
