[package]
name = "energy-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
base64.workspace = true
chrono.workspace = true
energy-core = { path = "../../crates/core" }
lambda_http.workspace = true
rand.workspace = true
passkey-auth = "0.1.3"
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
url = "2"
uuid.workspace = true
